--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_d29ya2FibGUtZ29iYmxlci0zOS5jbGVyay5hY2NvdW50cy5kZXYk
+VITE_API_URL=https://xeno-mini-crm-backend-4vjf.onrender.com/
